--- a/index.html
+++ b/index.html
@@ -209,11 +209,15 @@
 																<table class="credit" border="0" cellspacing="0" cellpadding="0" align="center" width="600">
 																	<tbody>
 																		<tr>
-																			<td align="center" style="font-family: 'Lato', sans-serif; font-size: 22px !important; font-weight: 300; color: #009ee3;">Encuentra todos tus productos favoritos</td>
+																			<td align="center" style="font-family: 'Lato', sans-serif; font-size: 22px !important; font-weight: 300; color: #009ee3;">
+																				¡SÓLO HOY!
+																			</td>
 																		</tr>
 																		<tr><td height="5"></td></tr>
                                     									<tr>
-																			<td align="center" style="font-family: 'Lato', sans-serif; font-size: 18px !important; font-weight: 400; color: #444;">En la semana del 22 al 28 de agosto</td>
+																			<td align="center" style="font-family: 'Lato', sans-serif; font-size: 18px !important; font-weight: 400; color: #444;">
+																				Disfruta el 11.11 de AliExpress
+																			</td>
 																		</tr>
 																	</tbody>
 																</table>
@@ -246,7 +250,7 @@
 						<table align="center" border="0" cellpadding="0" cellspacing="0" class="content_wrap" width="100%">
 							<tr>
 								<td align="center" valign="top" width="100%">
-									<a href="http://mx.aliexpress.com/" target="_blank" title="Header">
+									<a href="https://mx.aliexpress.com/" target="_blank" title="Header">
 										<img src="img/header.jpg" style="display:block;" border="0" hspace="0" vspace="0" title="" alt="" width="600" class="banner">
 									</a>
 								</td>
@@ -259,7 +263,7 @@
 
 			                <tr>
 								<td align="center" valign="top" width="100%">
-									<a href="http://mx.aliexpress.com/" target="_blank" title="Header">
+									<a href="https://mx.aliexpress.com/" target="_blank" title="Header">
 										<img src="img/3msi.png" style="display:block;" border="0" hspace="0" vspace="0" title="" alt="" width="600" class="banner">
 									</a>
 								</td>
@@ -331,7 +335,7 @@
 		<td align="center">
 			<table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="content_wrap" style="max-width:600px">
         <tbody><tr>
-          <td align="center" style="font-family: 'Lato', sans-serif; font-weight: 300; font-size: 23px !important; color: #009ee3; padding: 20px 0 10px;">Disfruta de la infinidad de productos
+          <td align="center" style="font-family: 'Lato', sans-serif; font-weight: 300; font-size: 23px !important; color: #009ee3; padding: 20px 0 10px;">Encuentra hasta lo inimaginable
           </td>
         </tr>
         <tr><td align="center" height="10" style="font-size:0px!important;">&nbsp;</td></tr>
@@ -491,14 +495,15 @@
         <!-- Ver mas -->
         <tr>
           <td align="center">
-            <a href="http://mx.aliexpress.com/" target="_blank" style="font-family: 'Lato', sans-serif; font-size: 18px !important; line-height: 1!important; padding: 15px 25px;background-color: #009EE3; color: #ffffff;border-radius: 8px;text-decoration:none;" title="Ver más">Ver más categorías ›</a>
+            <a href="https://mx.aliexpress.com/" target="_blank" style="font-family: 'Lato', sans-serif; font-size: 18px !important; line-height: 1!important; padding: 15px 25px;background-color: #009EE3; color: #ffffff;border-radius: 8px;text-decoration:none;" title="Ver más">Ver más categorías ›</a>
           </td>
         </tr>
         <tr><td align="center" height="40" style="font-size:0px!important;">&nbsp;</td></tr>
 			</tbody></table>
 		</td>
 	</tr>
-</tbody></table>
+</tbody>
+</table>
 
 <table>
 	<tr><td height="10"></td></tr>
@@ -705,27 +710,33 @@
 													<tr>
 														<td align="center" width="600">
 															<table width="100%" cellpadding="0" cellspacing="0" border="0" align="center" class="content_wrap">
-																<tbody><tr>
+																<tr>
 																	<td align="center">
 																		<p style="font-family: 'Lato', sans-serif; font-size:11px !important; color:#999999;">
-																			<sup>(2)</sup> Beneficio 10% de descuento válido únicamente ingresando el código “MERCADOPAGO” en forma previa al pago, sujeto a tope máximo de MX$100. <sup>(2)</sup> Beneficio válido desde las 00:00 horas del 22/08/2016 hasta las 23:59 horas del 28/08/2016 (hora del centro de México), para compras realizadas en http://mx.aliexpress.com/, que sean abonadas por medio de la Plataforma de Mercado Pago (www.mercadopago.com.mx) operada por MercadoLibre, S. de R.L. de C.V. (“Mercado Pago”). El descuento se encuentra a cargo de Mercado Pago y se hará efectivo al momento de la realización del pago a través de Mercado Pago. Beneficio utilizable una única vez por usuario, en una única operación. Mercado Pago no es propietario de los artículos ofrecidos, adquiridos o enajenados por los usuarios, no tiene posesión de ellos ni los ofrece en venta. Mercado Pago no es responsable por la existencia, calidad, cantidad, estado o integridad de dichos bienes, por la legitimidad de la operación, ni por el efectivo cumplimiento de las obligaciones asumidas por el vendedor o el comprador.
+																			<sup>(1)</sup>
+																			Beneficio 10% de descuento válido únicamente ingresando el código “MERCADOPAGO” en forma previa al pago, sujeto a tope máximo de MX$100.
+																			<br>
+																			<sup>(1)</sup>
+																			Beneficio válido desde las 00:00 horas del 11/11/2016 hasta las 23:59 horas del 11/11/2016 (hora del centro de México), para compras realizadas en https://mx.aliexpress.com/, que sean abonadas por medio de la Plataforma de Mercado Pago (www.mercadopago.com.mx) operada por MercadoLibre, S. de R.L. de C.V. (“Mercado Pago”). El descuento se encuentra a cargo de Mercado Pago y se hará efectivo al momento de la realización del pago a través de Mercado Pago. Beneficio utilizable una única vez por usuario, en una única operación. Mercado Pago no es propietario de los artículos ofrecidos, adquiridos o enajenados por los usuarios, no tiene posesión de ellos ni los ofrece en venta. Mercado Pago no es responsable por la existencia, calidad, cantidad, estado o integridad de dichos bienes, por la legitimidad de la operación, ni por el efectivo cumplimiento de las obligaciones asumidas por el vendedor o el comprador.
+																			<br>
+																			<sup>(2)</sup>
+																			Beneficio válido en compra mínima de $500 MXN.
 																		</p>
 																		<p style="Margin-top: 10px;">
 																			$document(/contentlibrary/campaigns/footers, mpm.htm)$
 																		</p>
 																	</td>
 																</tr>
-																<tr>
-																	<td width="100%" height="10"></td>
-																</tr>
-															</tbody></table>
+																<tr><td height="10"></td></tr>
+															</table>
 														</td>
 													</tr>
 												</tbody>
 											</table>
 										</td>
 									</tr>
-								</tbody></table>
+								</tbody>
+							</table>
 							</td>
 						</tr>
 					</tbody>
@@ -739,4 +750,5 @@
 
 
 
-</body></html>
+</body>
+</html>
